# ogre-next-imgui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
CMake/Templates/: Resources.cfg.in
Dependencies/: .gitignore
src/: OgreNextImguiDemo.cpp  OgreNextImguiGameState.cpp  OgreNextImguiGameState.h
src/ImguiOgre/: ImguiManager.cpp  ImguiManager.h  ImguiRenderable.cpp  ImguiRenderable.h
